# Boost

./: .env.example  Makefile  Procfile  requirements.txt
apps/admin/: README.md
apps/backend/: alembic.ini  pyproject.toml
apps/backend/bot/: __init__.py  pyproject.toml
apps/backend/bot/app/: README.md  __init__.py  main.py  pyproject.toml
apps/backend/bot/app/service/: __init__.py  bot_service.py  contracts.py  exceptions.py
apps/backend/bot/webapp/: README.md  eslint.config.js  index.html  orders.html  package.json  payments.html  profile.html  tasks.html  vite.config.js
apps/backend/bot/webapp/public/: index.html  manifest.webmanifest
apps/backend/bot/webapp/public/scripts/: api.js  state.js  ui.js
apps/backend/bot/webapp/public/styles/: main.css  orders.css  payments.css  profile.css  tasks.css
apps/backend/bot/webapp/src/: api.js  main.js  state.js  ui.js
apps/backend/bot/webapp/src/views/: orders.js  payments.js  profile.js  tasks.js
apps/backend/src/: main.py
apps/backend/src/adapters/cache/: __init__.py  base.py  exceptions.py  idempotency.py  order_cache.py  rate_limit.py  redis_cache.py  task_cache.py  user_cache.py  utils.py
apps/backend/src/adapters/payments/: __init__.py  base.py  exceptions.py  manual.py  utils.py  webhook_handlers.py
apps/backend/src/adapters/telegram/: __init__.py  client.py  exceptions.py  notifier.py  types.py  utils.py  webapp_auth.py  webhook.py
apps/backend/src/api/v1/: deps.py
apps/backend/src/api/v1/routes/: __init__.py  admin.py  balance.py  orders.py  payments.py  stats.py  system.py  tasks.py  telegram.py  users.py
apps/backend/src/api/v1/schemas/: __init__.py  balance_schemas.py  base.py  order_schemas.py  payment_schemas.py  stats_schemas.py  system_schemas.py  task_schemas.py  telegram_schemas.py  user_schemas.py
apps/backend/src/core/: __init__.py  config.py  database.py  deps.py  exceptions.py  logging.py  security.py  startup.py
apps/backend/src/db/: base.py
apps/backend/src/db/migrations/: README.md  __init__.py  env.py  script.py.mako
apps/backend/src/db/models/: __all_models__.py  __init__.py  balance_model.py  order_model.py  payment_model.py  referral_model.py  task_model.py  user_model.py
apps/backend/src/db/repositories/: __init__.py  base.py  order_repository.py  payment_repository.py  referral_repository.py  task_repository.py  transaction_repository.py  user_repository.py
apps/backend/src/domain/events/: __init__.py  balance_events.py  base.py  dispatcher.py  order_events.py  payment_events.py  referral_events.py  task_events.py  user_events.py
apps/backend/src/domain/rules/: __init__.py  balance_rules.py  base.py  order_rules.py  payment_rules.py  referral_rules.py  task_rules.py  user_rules.py
apps/backend/src/domain/services/: __init__.py  balance_service.py  base.py  health_service.py  order_service.py  payment_service.py  referral_service.py  stats_service.py  task_service.py  user_service.py
apps/backend/src/utils/: __init__.py  crypto.py  exceptions.py  formatters.py  id_generator.py  logger.py  time_utils.py  validators.py
apps/bot/app/: config.py  main.py
apps/bot/app/handlers/: __init__.py  admin.py  payments.py  start.py
apps/bot/app/keyboards/: __init__.py  menus.py
apps/bot/app/middlewares/: __init__.py  dependency.py  logging.py
apps/bot/app/service/: api.py
infra/: docker-compose.yml  railway.toml
infra/docker/: backend.Dockerfile  bot.Dockerfile  nginx.conf  webapp.Dockerfile
